--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.15.1",
+    "fullpage-nuxt": "0.0.3",
     "nuxt": "^2.15.7",
     "vuetify": "^2.5.5"
   },
